@@ -2925,6 +2925,7 @@ $1',
 'sp-contributions-newbies-title'       => 'User contributions for new accounts',
 'sp-contributions-blocklog'            => 'block log',
 'sp-contributions-deleted'             => 'deleted user contributions',
+'sp-contributions-uploads'             => 'uploads',
 'sp-contributions-logs'                => 'logs',
 'sp-contributions-talk'                => 'talk',
 'sp-contributions-userrights'          => 'user rights management',
